--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -12,6 +12,12 @@ $width-large: 768px;
 
 	h1#site-name {
 		padding-bottom: 15px;
+		margin-top: 0px;
+		line-height: 20px;
+	}
+
+	header {
+		margin-bottom: 5px;
 	}
 
 	#logo {
@@ -28,6 +34,15 @@ $width-large: 768px;
 		padding-left: 0px;
 	}
 
+	.views-field-title {
+		font-size: 2.4em;
+	}
+
+	p {
+		font-size: 22px;
+		line-height: 27px;
+		padding: 0px 15px 0px 15px;
+	}
 }
 
 @media (max-width: $width-large) {
@@ -38,7 +53,6 @@ $width-large: 768px;
 	}
 
 	.region-content {
-		padding-left: 12%;
+		padding-left: 1%;
 	}
-
 }
