--- a/sass/helpers/_mixins.scss
+++ b/sass/helpers/_mixins.scss
@@ -1,5 +1,7 @@
-/** Mixins **/
-
+/* ==========================================================================
+   Mixins
+   ========================================================================== */
+   
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
      -moz-border-radius: $radius;
