--- a/sass/themes/_admin.scss
+++ b/sass/themes/_admin.scss
@@ -1,10 +1,7 @@
-/* Admin Styles */
+/* ==========================================================================
+   Admin Theme Styles
+   ========================================================================== */
 
 .submitted {
 	display:none;
-}
-
-.show {
-	height: 50%;
-	background-color: rgba(37,37,37,0.9)
 }
