--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -1,3 +1,12 @@
-#main-wrapper .views-field-body {
+/* ==========================================================================
+   Posts
+   ========================================================================== */
+
+.views-field-body, .field-name-body {
 	margin-bottom: 5%;
+}
+
+blockquote {
+	background-color: #fff7eb;
+	padding: 5px 20px 20px 20px;
 }
