--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -30,6 +30,11 @@ $width-large: 768px;
 		margin-top: 0px;
 		line-height: 20px;
 	}
+	
+	#page-title {
+		font-size: 2.4em;
+		margin-bottom: 0px;
+	}
 
 	#logo {
 		float: none;
