--- a/sass/themes/_admin.scss
+++ b/sass/themes/_admin.scss
@@ -2,6 +2,6 @@
    Admin Theme Styles
    ========================================================================== */
 
-.submitted {
+.submitted, #block-system-main .comment_forbidden {
 	display:none;
 }
