--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -7,4 +7,16 @@ body {
 	margin: 0 auto;
 }
 
+.pager-current {
+	color: $grey;
+	font-size: 0.8em;
+}
+
+li[class^='pager-'] {
+	text-transform: $up;
+	padding-right: 0px;
+	padding-left: 0px;
+	font-size: 0.8em;
+}
+
 
