--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,8 +16,9 @@ p {
 }
 
 p:first-letter {
-	font-size: 50px;
-	font-family: $medieval;
+	font-size: 55px;
+	font-family: $crimson;
+	font-weight: bold;
 }
 
 /* Links */
