--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -2,4 +2,6 @@
    Reset
    ========================================================================== */
 
-/** This theme uses Normalize.css. You can find it in the CSS folder **/
+/**
+ * This theme uses Normalize.css. You can find it in the CSS folder
+ */
