--- a/sass/components/_images.scss
+++ b/sass/components/_images.scss
@@ -2,13 +2,17 @@
    Image Styles
    ========================================================================== */
 
-/* General */
+/**
+ * General
+ */
 img {
 	max-width: 100%;
 	height: auto;
 }
 
-/* Portrait/Logo Style */
+/**
+ * Portrait/Logo Style
+ */
 #logo  {
 	float: right;
 	padding-top: 22px;
