--- a/sass/helpers/_variables.scss
+++ b/sass/helpers/_variables.scss
@@ -2,18 +2,26 @@
    Variables
    ========================================================================== */
 
-/** Fonts **/
+/**
+ * Main Fonts
+ */
 $crimson: 'Crimson Text', serif;
 $lato: 'Lato', sans-serif;
 $medieval: 'MedievalSharp', cursive;
 
-/** Colors **/
+/**
+ * Main Colors
+ */
 $orange: #CC6600;
 $grey: #333;
 
-/** Text Shadow **/
+/**
+ * Text Shadow
+ */
 $shadow: 2px 2px 2px #333; 
 
-/** Text Decoration **/
+/**
+ * Text Decoration
+ */
 $line: underline;
 $up: uppercase;
