--- a/sass/layout/_posts.scss
+++ b/sass/layout/_posts.scss
@@ -1,8 +1,7 @@
 /* ==========================================================================
    Posts
    ========================================================================== */
-
-.views-field-body, .field-name-body {
+.field-content, .views-row {
 	margin-bottom: 5%;
 }
 
