--- a/css/main.css
+++ b/css/main.css
@@ -126,7 +126,7 @@ header {
 /* ==========================================================================
    Posts
    ========================================================================== */
-.views-field-body, .field-name-body {
+.field-content, .views-row {
   margin-bottom: 5%; }
 
 blockquote {
@@ -138,7 +138,8 @@ blockquote {
    ========================================================================== */
 body {
   max-width: 765px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  min-height: 820px; }
 
 .pager-current {
   color: #333333;
@@ -204,7 +205,8 @@ img {
    ========================================================================== */
 #comments h2 {
   text-align: center;
-  font-size: 1.8em; }
+  font-size: 1.8em;
+  clear: both; }
 #comments h3 a:hover {
   text-decoration: underline; }
 
@@ -217,11 +219,39 @@ img {
       font-weight: normal;
       font-size: 1.0em; }
 
-.comment-add {
-  text-decoration: underline; }
-
-.view .comment-add {
+#block-system-main .comment-add {
   display: none; }
+
+/* ==========================================================================
+   Tag Styles
+   ========================================================================== */
+.field-type-taxonomy-term-reference {
+  text-transform: uppercase;
+  font-size: 0.8em; }
+  .field-type-taxonomy-term-reference .field-label {
+    color: #333333;
+    background-color: #fff7eb;
+    font-weight: normal;
+    display: inline;
+    float: left;
+    padding: 3px 3px 3px 5px; }
+  .field-type-taxonomy-term-reference .field-item {
+    display: inline;
+    float: left;
+    margin-right: 5px;
+    padding: 3px; }
+    .field-type-taxonomy-term-reference .field-item:hover {
+      text-decoration: underline; }
+
+.field-type-datetime {
+  text-transform: uppercase;
+  font-size: 0.9em; }
+  .field-type-datetime .field-item {
+    background-color: #fff7eb;
+    display: inline;
+    float: right;
+    margin-right: 5px;
+    padding: 3px; }
 
 /* ==========================================================================
    Drupal Styles
@@ -254,13 +284,17 @@ img {
     margin-top: 0px;
     line-height: 20px; }
 
+  #block-system-main {
+    margin-bottom: 50px; }
+
   #page-title {
     font-size: 2.4em;
     margin-bottom: 0px; }
 
   #logo {
     float: none;
-    padding-left: 22%; }
+    padding-left: 22%;
+    margin-bottom: 20px; }
 
   .content {
     padding-left: 10px;
@@ -275,6 +309,9 @@ img {
   #page .content, header {
     padding-left: 10px;
     padding-right: 10px; }
+
+  #block-system-main {
+    margin-bottom: 50px; }
 
   .region-content {
     padding-left: 1%; } }
