--- a/sass/components/_comments.scss
+++ b/sass/components/_comments.scss
@@ -6,6 +6,7 @@
 	h2 {
 		text-align: center;
 		font-size: 1.8em;
+		clear:both;
 	}
 	h3 a:hover {
 		text-decoration: $line;
@@ -24,10 +25,6 @@
 	}
 }
 
-.comment-add {
-	text-decoration: $line;
-}
-
-.view .comment-add {
+#block-system-main .comment-add {
 	display: none;
 }
