--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,7 @@
 @import "components/images";
 @import "components/navigation";
 @import "components/comments";
+@import "components/tags";
 
 // Themes
 @import "themes/theme";
