--- a/sass/layout/_media.scss
+++ b/sass/layout/_media.scss
@@ -30,6 +30,10 @@ $width-large: 768px;
 		line-height: 20px;
 	}
 	
+	#site-slogan {
+		text-align: center;
+	}
+	
 	#block-system-main {
 		margin-bottom: 50px;
 	}
