--- a/css/main.css
+++ b/css/main.css
@@ -29,58 +29,39 @@
  * Paragraphs and Links
  */
 p {
+  font-family: "Crimson Text", serif;
+  color: #333333;
   font-size: 24px;
   line-height: 28px;
-  margin-bottom: 10px;
-  font-family: "Crimson Text", serif;
-  color: #333333; }
+  margin-bottom: 10px; }
   p a:hover {
     text-decoration: underline; }
 
 p:first-letter {
-  font-size: 55px;
   font-family: "Crimson Text", serif;
+  font-size: 55px;
   font-weight: bold; }
 
 /**
  * Links
  */
 a {
-  text-decoration: none;
-  color: #cc6600; }
+  color: #cc6600;
+  text-decoration: none; }
 
 /* ==========================================================================
    Headers
    ========================================================================== */
 h1, h2, h3, h4, h5, h6 {
-  margin-top: 0px;
-  line-height: 100%; }
-
-h2, h3 {
-  font-family: "Lato", sans-serif; }
-
-h2 {
-  font-size: 1.3em;
-  color: #cc6600;
-  text-transform: uppercase; }
-
-h3 {
-  color: #333333;
-  margin-bottom: 15px;
-  text-decoration: none;
-  font-weight: normal;
+  line-height: 100%;
   font-family: "Lato", sans-serif;
-  font-size: 2.0em; }
+  margin-top: 0px;
+  font-weight: normal; }
 
-h4 {
-  color: #fff;
-  font-family: "Crimson Text", serif;
-  margin-bottom: 0px; }
+h1 {
+  font-size: 2.4em; }
 
-/**
- * Page and Post Titles
- */
-.views-field-title, .view h2, #page-title {
+h2, .views-field-title, #page-title {
   text-shadow: 2px 2px 2px #333333;
   text-align: center;
   text-transform: uppercase;
@@ -92,18 +73,29 @@ h4 {
   color: #cc6600;
   clear: both;
   font-weight: normal; }
-  .views-field-title a:hover, .view h2 a:hover, #page-title a:hover {
+  h2 a:hover, .views-field-title a:hover, #page-title a:hover {
     color: #333333; }
 
 #page-title {
   margin-bottom: 0px; }
 
+h3 {
+  font-size: 2.0em;
+  color: #333333;
+  margin-bottom: 15px;
+  text-decoration: none; }
+
+h4 {
+  font-size: 1.8em; }
+
+/**
+ * Name of your site
+ */
 #site-name {
   margin-bottom: 0px;
   font-family: "Crimson Text", serif;
   font-weight: 700;
   font-size: 2.8em;
-  line-height: 45px;
   margin-top: 40px; }
   #site-name a {
     color: #333333; }
@@ -192,13 +184,22 @@ img {
   font-family: "Crimson Text", serif;
   color: #333333; }
   #main-menu li {
-    padding: 0px 10px 0px 0px; }
+    padding: 0px;
+    margin-top: 0px; }
     #main-menu li a {
-      font-size: .9em;
+      font-size: .5em;
       color: #333333;
-      font-weight: normal; }
+      font-weight: normal;
+      font-family: "Crimson Text", serif;
+      text-shadow: none;
+      margin-top: 0px; }
       #main-menu li a:hover {
         color: #cc6600; }
+
+#site-slogan {
+  width: 100%;
+  text-align: left;
+  margin-top: -15px; }
 
 /* ==========================================================================
    Comment Styles
@@ -283,6 +284,9 @@ img {
     padding-bottom: 15px;
     margin-top: 0px;
     line-height: 20px; }
+
+  #site-slogan {
+    text-align: center; }
 
   #block-system-main {
     margin-bottom: 50px; }
