--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -6,19 +6,19 @@
  * Paragraphs and Links
  */
 p {
+	font-family: $crimson;
+	color: $grey;
 	font-size: 24px;
 	line-height: 28px;
 	margin-bottom: 10px;
-	font-family: $crimson;
-	color: $grey;
 	a:hover {
 		text-decoration: $line;
 	}
 }
 
 p:first-letter {
-	font-size: 55px;
 	font-family: $crimson;
+	font-size: 55px;
 	font-weight: bold;
 }
 
@@ -26,8 +26,8 @@ p:first-letter {
  * Links
  */
 a {
-	text-decoration: none;
 	color: $orange;
+	text-decoration: none;
 }
 
 /* ==========================================================================
@@ -35,40 +35,19 @@ a {
    ========================================================================== */
 
 #{headings()} {
+    line-height: 100%;
+    font-family: $lato;
 	margin-top: 0px;
-	line-height: 100%;
+	font-weight: normal;
+	
 }
 
-#{headings(2, 3)} {
-	font-family: $lato;
+h1 {
+	font-size: 2.4em;
 }
 
-h2 {
-	font-size: 1.3em;
-	color: $orange;
-	text-transform: $up;
-}
-
-h3 {
-  	color: $grey;
-  	margin-bottom: 15px;
-  	text-decoration: none;
-  	font-weight: normal;
-  	font-family: $lato;
-  	font-size: 2.0em;
-}
-
-h4 {
-	color: #fff;
-    font-family: $crimson;
-    margin-bottom: 0px;
-}
-
-/**
- * Page and Post Titles
- */
-.views-field-title, .view h2, #page-title {
-	text-shadow: $shadow;
+h2, .views-field-title, #page-title {
+    text-shadow: $shadow;
 	text-align:center;
 	text-transform: $up;
 	margin-top: 0px;
@@ -88,12 +67,25 @@ h4 {
 	margin-bottom: 0px;
 }
 
+h3 {
+	font-size: 2.0em;
+  	color: $grey;
+  	margin-bottom: 15px;
+  	text-decoration: none;
+}
+
+h4 {
+	font-size: 1.8em;
+}
+
+/**
+ * Name of your site
+ */
 #site-name {
 	margin-bottom: 0px;
 	font-family: $crimson;
 	font-weight: 700;
 	font-size: 2.8em;
-	line-height: 45px;
 	margin-top: 40px;
 	a {
 		color: $grey;
